framec_tests/language_specific/python/v3_validator/positive/terminal_last_transition.frm
@target python

system S {
    machine:
        $A {
            e() {
                # native prelude
                -> $B()
            }
        }
        $B {
        }
}
