framec_tests/language_specific/python/v3_validator/negative/transition_state_arity_mismatch.frm
@target python
# @expect: E405

system S {
    machine:
        $A {
            e() {
                -> $B(1)
            }
        }
        $B(x, y) { }
}

